--- a/requirements.txt
+++ b/requirements.txt
@@ -8,9 +8,12 @@ MarkupSafe==0.18
 SQLAlchemy==0.8.3
 WTForms==1.0.5
 Werkzeug==0.9.4
+argparse==1.2.1
 bcrypt==1.0.2
 cffi==0.7.2
 gunicorn==18.0
 itsdangerous==0.23
 pycparser==2.10
+python-forecastio==0.1
+requests==2.0.1
 wsgiref==0.1.2
