--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,21 @@
 Flask==0.10.1
 Flask-Login==0.2.7
 Flask-Markdown==0.3
+Flask-Migrate==0.1.4
+Flask-SQLAlchemy==1.0
+Flask-Script==0.6.3
 Flask-WTF==0.9.3
 Jinja2==2.7.1
+Mako==0.9.0
 Markdown==2.3.1
 MarkupSafe==0.18
 SQLAlchemy==0.8.3
 WTForms==1.0.5
 Werkzeug==0.9.4
+alembic==0.6.0
+argparse==1.2.1
 gunicorn==18.0
 itsdangerous==0.23
-psycopg2==2.5.1
 pycparser==2.10
 python-forecastio==0.1
 requests==2.0.1
